welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:12: error: not found: value array
  var T=array[Color](6)
        ^Array1:26: error: not found: value T
    setCouleurBrosse(T(i))
                     ^Array1:31: error: not found: value setColeurBrosse
  setColeurBrosse(T(5))
  ^Array1:31: error: not found: value T
  setColeurBrosse(T(5))
                  ^